# ifl2024-call-by-name

./: .gitignore  LICENSE  Makefile  genlotsalines.sh  ifl2024-sharing.cabal
exe/conduit-1/: Main.hs
exe/conduit-2/: Main.hs
exe/conduit-3/: Main.hs
exe/conduit-4/: Main.hs
exe/conduit-5/: Main.hs
exe/conduit-6/: Main.hs
exe/conduit-7/: Main.hs
exe/conduit-8/: Main.hs
exe/numberLines-0/: Main.hs
exe/numberLines-1/: Main.hs
exe/numberLines-2/: Main.hs
exe/numberLines-3/: Main.hs
exe/numberLines-4/: Main.hs
exe/printSecret-1/: Main.hs
exe/printSecret-2/: Main.hs
exe/printSecret-3/: Main.hs
lib/: Conduit.hs  SimplifiedPrelude.hs  TryAgain.hs
